Second Commit of c1

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Melanie's Page</title>
   </head>
   <body>
-     <nav class="navbar navbar-expand-lg navbar-light">
+     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,26 +42,94 @@
             <a class="nav-link" href="#">contact</a>
           </li>
          </ul>
+         <ul>
+           <li>
+             <i class="fa fa-facebook"></i>
+           </li>
+         </ul>
       </div>
     </nav>
 
+<div class="container-fluid">
+  <div class="row">
+    
 
-    <div class="jumbotron">
-      <h1 class="display-4">Hello! My name is Melanie Dotollo but</h1>
-      <h2 class="display-4">some people call me melai. I am a web designer</h2>
-      <p class="lead">I design awesome web pages.</p>
+    <div class="jumbotron col-12 text-center">
+      <p class="display-4">Hi, I'm Melanie Dotollo!</p>
+      <!-- <p class="display-4">some people call me melai. I am a web designer</p> -->
+      <!-- <p class="lead">I design and build user interfaces.</p> -->
+      <p class="lead">
+      Born in Taguig, Living in Sta.Rosa
+      <br>
+      Raised by the 90's
+      <br>
+      2 years of experience
+      <br>
+      now available for you.
+      </p>
       <hr class="my-4">
       <p>Want to learn more about me?</p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
-
- 
-
-
+      </div>
+</div>
 
 
 
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
@@ -65,12 +137,22 @@
 
 
 
+<!-- ww
+
+ -->
 
 
 
+<!-- 
 
+I’m a Full-Stack Developer located in Laguna. I have a serious passion for UI effects, animations and creating intuitive, dynamic user experiences.
 
+Well-organised person, problem solver, independent employee with high attention to detail. Fan of MMA, outdoor activities, TV series and English literature. A family person and father of two fractious boys,
 
+Interested in the entire frontend spectrum and working on ambitious projects with positive people.
+
+Let’s make something special.
+ -->
 
 
 
