--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
       <!-- <p class="lead">I design and build user interfaces.</p> -->
       <p class="lead">
       Born in Taguig, Living in Sta.Rosa
-      <br>
+      </p>
+      <p class="lead">    
       Raised by the 90's
-      <br>
+      </p>
+      <p class="lead">
       2 years of Experience
-      <br>
+      </p>
+      <p class="lead">
       Now available for you.
       </p>
       <hr class="my-4">
